Creacion y edicion de usuario

--- a/CCLM/CCLM/CCLM.csproj
+++ b/CCLM/CCLM/CCLM.csproj
@@ -530,6 +530,7 @@
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\User\Edit.cshtml" />
     <Content Include="Views\Shared\_Layout1.cshtml" />
+    <Content Include="Views\User\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
