--- a/CCLM/CCLM/CCLM.csproj
+++ b/CCLM/CCLM/CCLM.csproj
@@ -227,6 +227,20 @@
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
+    <Content Include="Content\bootstrap-timepicker\css\bootstrap-timepicker.css" />
+    <Content Include="Content\bootstrap-timepicker\css\bootstrap-timepicker.min.css" />
+    <Content Include="Content\bootstrap-timepicker\js\bootstrap-timepicker.js" />
+    <Content Include="Content\bootstrap-timepicker\js\bootstrap-timepicker.min.js" />
+    <Content Include="Content\bootstrap-touchspin\demo\demo.css" />
+    <Content Include="Content\bootstrap-touchspin\demo\favicon.ico" />
+    <Content Include="Content\bootstrap-touchspin\demo\index.html" />
+    <Content Include="Content\bootstrap-touchspin\dist\jquery.bootstrap-touchspin.css" />
+    <Content Include="Content\bootstrap-touchspin\dist\jquery.bootstrap-touchspin.js" />
+    <Content Include="Content\bootstrap-touchspin\dist\jquery.bootstrap-touchspin.min.css" />
+    <Content Include="Content\bootstrap-touchspin\dist\jquery.bootstrap-touchspin.min.js" />
+    <Content Include="Content\bootstrap-touchspin\Gruntfile.js" />
+    <Content Include="Content\bootstrap-touchspin\src\jquery.bootstrap-touchspin.css" />
+    <Content Include="Content\bootstrap-touchspin\src\jquery.bootstrap-touchspin.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\chosen_v1.8.2\chosen-sprite%402x.png" />
@@ -489,6 +503,22 @@
     <Content Include="Content\sb-admin\vendor\font-awesome\scss\_variables.scss" />
     <Content Include="Content\chosen_v1.8.2\bower.json" />
     <Content Include="Content\chosen_v1.8.2\package.json" />
+    <Content Include="Content\bootstrap-touchspin\.editorconfig" />
+    <Content Include="Content\bootstrap-touchspin\.gitignore" />
+    <Content Include="Content\bootstrap-touchspin\.jshintrc" />
+    <Content Include="Content\bootstrap-touchspin\.travis.yml" />
+    <Content Include="Content\bootstrap-touchspin\bootstrap-touchspin.jquery.json" />
+    <Content Include="Content\bootstrap-touchspin\bower.json" />
+    <Content Include="Content\bootstrap-touchspin\CONTRIBUTING.md" />
+    <Content Include="Content\bootstrap-touchspin\LICENSE.md" />
+    <Content Include="Content\bootstrap-touchspin\package.json" />
+    <Content Include="Content\bootstrap-touchspin\README.md" />
+    <Content Include="Content\bootstrap-timepicker\bower.json" />
+    <Content Include="Content\bootstrap-timepicker\CHANGELOG.md" />
+    <Content Include="Content\bootstrap-timepicker\composer.json" />
+    <Content Include="Content\bootstrap-timepicker\css\timepicker.less" />
+    <Content Include="Content\bootstrap-timepicker\package.json" />
+    <Content Include="Content\bootstrap-timepicker\README.md" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
